# ambassador-rust-ratelimiter

./: Cargo.toml  Dockerfile  README.md  build.rs
helm/ambassador-rust-ratelimiter/: Chart.yaml  values.yaml
helm/ambassador-rust-ratelimiter/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
helm/ambassador-rust-ratelimiter/templates/tests/: test-connection.yaml
src/: main.rs
src/protos/: mod.rs
