[package]
name = "ambassador-rust-rate-limiter"
version = "0.1.0"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
build = "build.rs"

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
ratelimit       = "0.4.4"
nonzero_ext     = "0.1.5"

[build-dependencies]
protoc-rust-grpc = "0.6.1"
