[package]
name = "ambassador-rust-rate-limiter"
version = "0.1.0"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
build = "build.rs"

[dependencies]
grpc            = "~0.6"
protobuf        = "~2"
ratelimit_meter = "~4.1.1"
nonzero_ext     = "0.1.5"
log             = "0.4.6"
env_logger      = "0.6.1"

[build-dependencies]
protoc-rust-grpc = "0.6.1"
