[package]
name = "ambassador-rust-rate-limiter"
version = "0.1.0"
authors = ["Shaleen Jain <shaleen@jain.sh>"]
edition = "2018"
build = "build.rs"

[dependencies]
tonic           = { version = "0.1.0", features = ["tls"] }
tokio           = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures         = { version = "0.3", default-features = false, features = ["alloc"] }
prost           = "0.6"
async-stream    = "0.2"
tower           = "0.3"

ratelimit_meter = "~4.1.1"
nonzero_ext     = "0.1.5"
log             = "0.4.6"
env_logger      = "0.6.1"

[build-dependencies]
tonic-build = "0.1.0"
